fix(sql): guard the @out/@in vertex-centric edge rewrite against LET-referencing remaining conditions (#5857)
handleEdgeTypeWithVertexRidFilter rewrites WHERE @out = <RID> / @in = <RID>
on an edge type into a vertex-centric FetchEdgesFromVertexStep, chaining any
remaining AND-ed conditions as a FilterStep on the fetch-side plan. That plan
is assembled before handleLet() runs, so a remaining condition referencing a
per-record LET variable was evaluated before LET populated it, silently
dropping every row.

This mirrors (and was found while reviewing) the same hazard already fixed
for the @rid = / IN [...] rewrite in #5854, and the pre-existing guard in the
generic predicate-pushdown path documented by LetWherePredicatePushdownTest.
Applies the identical guard: skip the rewrite when a per-record LET clause is
present and the WHERE clause text references a $ variable.

Fixes #5856

(cherry picked from commit 64cb88feba494e61c2501ad961f47e4fcc6f1867)